--- a/2.priklad/style.css
+++ b/2.priklad/style.css
@@ -4,15 +4,15 @@
     font-family: "Verdana", "DejaVu Sans",  sans-serif;
 }
  
+.adjust-font-size {
+    font-size: 24px;
+}
+
 #number2 {
     color: blue;
     font-size: 36px;
 }
-#number3{
-    font-size: 24px;
-}
 #number4 {
     background-color: rgb(133, 187, 133);
-    font-size: 24px;
     font-weight: bold;
 }
